2003-09-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (cheapestVal): reenabled to reduce int to char
	* src/SDCCval.c (constVal): added reduction from int to char
	* src/SDCCval.c (valMult, valDiv): fixed sign handling
	* src/SDCCval.c (valShift): fixed after change of cheapestVal()
	* src/SDCCval.c (valCompare): fixed EQ_OP and NE_OP; they have
	to ignore the sign
	* support/regression/tests/shifts.c: fixed

2003-09-13  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (genXor): Fixed bug #805445

2003-09-12  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed bug #621531 (const & volatile confusion in the type chain).
	DCL_PTR_CONST, DCL_PTR_VOLATILE, & IS_PTR_CONST now exclusively
	refer to the const or volatile state of the pointer itself.

	* src/SDCCast.c
	* src/SDCCglue.c
	* src/SDCCicode.c
	* src/SDCCsymt.c
	* src/SDCCval.c
	* src/SDCC.y
	* src/SDCCsymt.h
	* src/pic/gen.c
	* src/pic/ralloc.c
	* src/pic16/gen.c
	* src/pic16/ralloc.c
	* support/regression/tests/const.c

2003-09-10  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	When checking for duplicated modules, use absolute paths
	instead of relative paths.  Files changed:

	* as/mcs51/lklib.c
	* link/z80/lklib.c

2003-09-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeLogic): fixed bug #797572

2003-09-07  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/include/string.h: added size_t typedef, changed
	prototypes to use size_t, eliminated separate reentrant and
	non-reentrant declarations, added _memmove declaration
	* device/lib/_memcpy.c: changed to use size_t instead of int,
	changed /4 to >>2 to avoid division library call
	* device/lib/_memcmp.c,
	* device/lib/_memset.c,
	* device/lib/_strncat.c,
	* device/lib/_strncpy.c,
	* device/lib/_strncmp.c: changed to use size_t instead of int
	* device/lib/_memmove.c: new file (fixed bug #772294)
	* device/lib/Makefile.in: added _memmove.c